src/css/style.css
/* ... */
.data-table-two .datatable-search input {
  @apply h-11.5 w-full rounded border border-stroke bg-whiter px-5 outline-none focus:border-primary dark:border-strokedark dark:bg-meta-4 dark:focus:border-primary;
}

.rangeSliderCommon .noUi-target {
  @apply border-none bg-transparent shadow-none;
}
.rangeSliderCommon .noUi-connects {
  @apply h-1.5 rounded-full bg-stroke dark:bg-strokedark;
}
.rangeSliderCommon .noUi-connect {
  @apply h-1.5 rounded-full bg-primary;
}
.rangeSliderOne .noUi-horizontal .noUi-handle {
  @apply -top-2 h-5.5 w-5.5 rounded-full border-none bg-primary shadow-none;
}
.rangeSliderTwo .noUi-horizontal .noUi-handle {
  @apply -top-2 h-6 w-6 rounded-full border-[6px] border-primary bg-white shadow-none dark:bg-black;
}
.noUi-horizontal .noUi-handle:after,
.noUi-horizontal .noUi-handle:before {
  @apply hidden;
}

input[type="search"]::-webkit-search-cancel-button {
  @apply appearance-none;
}

.custom-input-date::-webkit-calendar-picker-indicator {
  background-position: center;
  background-repeat: no-repeat;
  background-size: 20px;
}
.custom-input-date-1::-webkit-calendar-picker-indicator {
  background-image: url(./images/icon/icon-calendar.svg);
}
.custom-input-date-2::-webkit-calendar-picker-indicator {
  background-image: url(./images/icon/icon-arrow-down.svg);
}

[x-cloak] {
  display: none !important;
}

.queueRow.otherItem {
  cursor: pointer;
}

.queueRow.otherItem:hover {
  background-color: gainsboro
}

.queueRow.currentIten.playing {
  @apply bg-gray;
}

.queueRow.currentIten.paused {
  background-color: lightcyan;
}


/* .queueRow.activeSelection {
  @apply bg-gray;
  background-color: lightcyan
}

.queueRow.inactiveSelection {
  background-color: lightcyan
} */

footer {
  @apply bg-whiten;
  /* z-99999; */
  z-index: 999999;
  /* background-color: black; */
  border-top: 1px solid #E5E7EB;
}

footer .player {
  /* background-color: rgb(28, 36, 52) */
  background-color: black;
}

table#files-table thead tr th#playHeader svg {
  display: none;
}

/* table#files-table tbody tr td#labelCol{
  @apply col-span-9;
} */

